# 811inventory

./: .gitignore  db.sqlite3  main.py  manage.py  pyproject.toml  qrgen.py
_811inventory/: asgi.py  settings.py  urls.py  wsgi.py
client/inventory-client/: .env.production  package-lock.json  package.json
client/inventory-client/src/: App.tsx  main.tsx
client/inventory-client/src/api/: index.ts  inventory.service.ts
client/inventory-client/src/components/: ProtectedRoute.tsx  Scanner.tsx
client/inventory-client/src/contexts/: AlertContext.jsx  AuthContext.tsx  FormContext.jsx  PaymentContext.jsx
client/inventory-client/src/layouts/: default.tsx
client/inventory-client/src/routes/: ItemForm.tsx  Login.tsx
client/inventory-client/src/types/: item.ts
deploy/: inventory socket  inventory.service
items/: admin.py  models.py  urls.py
items/api/: serializers.py  urls.py  views.py
items/management/commands/: import_items.py
items/migrations/: 0001_initial.py  0002_alter_inventoryitem_options_and_more.py  0003_inventoryitem_qr.py
